config/prow/cluster/deck_ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: prow
  name: deck
  annotations:
    # Change this to your issuer when using cert-manager. Does
    # nothing when not using cert-manager.
    cert-manager.io/cluster-issuer: letsencrypt-staging
    kubernetes.io/ingress.class: public-iks-k8s-nginx
spec:
  backend:
    # specify the default backend for `ingress-gce` (https://cloud.google.com/kubernetes-engine/docs/concepts/ingress#prow_backend)
    serviceName: deck
    servicePort: 80
  rules:
    - host: prow.ppc64le-cloud.org
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: deck
                port:
                  number: 80
  tls:
    - hosts:
        - prow.ppc64le-cloud.org
      secretName: ppc64le-cloud
